--- a/GameJoltApiTest/Assembly-CSharp-Editor.csproj
+++ b/GameJoltApiTest/Assembly-CSharp-Editor.csproj
@@ -11,10 +11,10 @@
     <ProductVersion>10.0.20506</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <RootNamespace></RootNamespace>
-    <ProjectGuid>{2ED3A521-C2D7-B381-268D-725BC26A1279}</ProjectGuid>
+    <ProjectGuid>{EB1FE86F-CD93-C65E-983E-D27E0A53FFE8}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <AssemblyName>Unity.2D.Sprite.Editor</AssemblyName>
+    <AssemblyName>Assembly-CSharp-Editor</AssemblyName>
     <TargetFrameworkVersion>v4.7.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <BaseDirectory>.</BaseDirectory>
@@ -28,7 +28,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <NoWarn>0169</NoWarn>
-    <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
+    <AllowUnsafeBlocks>False</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -37,7 +37,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <NoWarn>0169</NoWarn>
-    <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
+    <AllowUnsafeBlocks>False</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup>
     <NoConfig>true</NoConfig>
@@ -55,40 +55,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-     <Compile Include="C:\Program Files\Unity\Hub\Editor\2019.3.15f1\Editor\Data\Resources\PackageManager\BuiltInPackages\com.unity.2d.sprite\Editor\AssemblyInfo.cs" />
-     <Compile Include="C:\Program Files\Unity\Hub\Editor\2019.3.15f1\Editor\Data\Resources\PackageManager\BuiltInPackages\com.unity.2d.sprite\Editor\Interface\IAssetDatabase.cs" />
-     <Compile Include="C:\Program Files\Unity\Hub\Editor\2019.3.15f1\Editor\Data\Resources\PackageManager\BuiltInPackages\com.unity.2d.sprite\Editor\Interface\IEvent.cs" />
-     <Compile Include="C:\Program Files\Unity\Hub\Editor\2019.3.15f1\Editor\Data\Resources\PackageManager\BuiltInPackages\com.unity.2d.sprite\Editor\Interface\IGL.cs" />
-     <Compile Include="C:\Program Files\Unity\Hub\Editor\2019.3.15f1\Editor\Data\Resources\PackageManager\BuiltInPackages\com.unity.2d.sprite\Editor\Interface\IGUIUtility.cs" />
-     <Compile Include="C:\Program Files\Unity\Hub\Editor\2019.3.15f1\Editor\Data\Resources\PackageManager\BuiltInPackages\com.unity.2d.sprite\Editor\Interface\IHandles.cs" />
-     <Compile Include="C:\Program Files\Unity\Hub\Editor\2019.3.15f1\Editor\Data\Resources\PackageManager\BuiltInPackages\com.unity.2d.sprite\Editor\Interface\ISpriteEditorDataProvider.cs" />
-     <Compile Include="C:\Program Files\Unity\Hub\Editor\2019.3.15f1\Editor\Data\Resources\PackageManager\BuiltInPackages\com.unity.2d.sprite\Editor\Interface\ITexture.cs" />
-     <Compile Include="C:\Program Files\Unity\Hub\Editor\2019.3.15f1\Editor\Data\Resources\PackageManager\BuiltInPackages\com.unity.2d.sprite\Editor\Interface\IUndoSystem.cs" />
-     <Compile Include="C:\Program Files\Unity\Hub\Editor\2019.3.15f1\Editor\Data\Resources\PackageManager\BuiltInPackages\com.unity.2d.sprite\Editor\ShapeEditor\ShapeEditor.cs" />
-     <Compile Include="C:\Program Files\Unity\Hub\Editor\2019.3.15f1\Editor\Data\Resources\PackageManager\BuiltInPackages\com.unity.2d.sprite\Editor\ShapeEditor\ShapeEditorRectSelection.cs" />
-     <Compile Include="C:\Program Files\Unity\Hub\Editor\2019.3.15f1\Editor\Data\Resources\PackageManager\BuiltInPackages\com.unity.2d.sprite\Editor\SpriteEditor\SpriteEditorHandles.cs" />
-     <Compile Include="C:\Program Files\Unity\Hub\Editor\2019.3.15f1\Editor\Data\Resources\PackageManager\BuiltInPackages\com.unity.2d.sprite\Editor\SpriteEditor\SpriteEditorMenu.cs" />
-     <Compile Include="C:\Program Files\Unity\Hub\Editor\2019.3.15f1\Editor\Data\Resources\PackageManager\BuiltInPackages\com.unity.2d.sprite\Editor\SpriteEditor\SpriteEditorUtility.cs" />
-     <Compile Include="C:\Program Files\Unity\Hub\Editor\2019.3.15f1\Editor\Data\Resources\PackageManager\BuiltInPackages\com.unity.2d.sprite\Editor\SpriteEditor\SpriteEditorWindow.cs" />
-     <Compile Include="C:\Program Files\Unity\Hub\Editor\2019.3.15f1\Editor\Data\Resources\PackageManager\BuiltInPackages\com.unity.2d.sprite\Editor\SpriteEditor\SpriteRect.cs" />
-     <Compile Include="C:\Program Files\Unity\Hub\Editor\2019.3.15f1\Editor\Data\Resources\PackageManager\BuiltInPackages\com.unity.2d.sprite\Editor\SpriteEditor\SpriteUtilityWindow.cs" />
-     <Compile Include="C:\Program Files\Unity\Hub\Editor\2019.3.15f1\Editor\Data\Resources\PackageManager\BuiltInPackages\com.unity.2d.sprite\Editor\SpriteEditorModule\ISpriteEditorModule.cs" />
-     <Compile Include="C:\Program Files\Unity\Hub\Editor\2019.3.15f1\Editor\Data\Resources\PackageManager\BuiltInPackages\com.unity.2d.sprite\Editor\SpriteEditorModule\SpriteEditorData.cs" />
-     <Compile Include="C:\Program Files\Unity\Hub\Editor\2019.3.15f1\Editor\Data\Resources\PackageManager\BuiltInPackages\com.unity.2d.sprite\Editor\SpriteEditorModule\SpriteFrameModule\SpriteFrameModule.cs" />
-     <Compile Include="C:\Program Files\Unity\Hub\Editor\2019.3.15f1\Editor\Data\Resources\PackageManager\BuiltInPackages\com.unity.2d.sprite\Editor\SpriteEditorModule\SpriteFrameModule\SpriteFrameModuleBase.cs" />
-     <Compile Include="C:\Program Files\Unity\Hub\Editor\2019.3.15f1\Editor\Data\Resources\PackageManager\BuiltInPackages\com.unity.2d.sprite\Editor\SpriteEditorModule\SpriteFrameModule\SpriteFrameModuleBaseView.cs" />
-     <Compile Include="C:\Program Files\Unity\Hub\Editor\2019.3.15f1\Editor\Data\Resources\PackageManager\BuiltInPackages\com.unity.2d.sprite\Editor\SpriteEditorModule\SpriteFrameModule\SpriteFrameModuleView.cs" />
-     <Compile Include="C:\Program Files\Unity\Hub\Editor\2019.3.15f1\Editor\Data\Resources\PackageManager\BuiltInPackages\com.unity.2d.sprite\Editor\SpriteEditorModule\SpriteFrameModule\SpritePolygonModeModule.cs" />
-     <Compile Include="C:\Program Files\Unity\Hub\Editor\2019.3.15f1\Editor\Data\Resources\PackageManager\BuiltInPackages\com.unity.2d.sprite\Editor\SpriteEditorModule\SpriteFrameModule\SpritePolygonModeModuleView.cs" />
-     <Compile Include="C:\Program Files\Unity\Hub\Editor\2019.3.15f1\Editor\Data\Resources\PackageManager\BuiltInPackages\com.unity.2d.sprite\Editor\SpriteEditorModule\SpriteOutlineModule.cs" />
-     <Compile Include="C:\Program Files\Unity\Hub\Editor\2019.3.15f1\Editor\Data\Resources\PackageManager\BuiltInPackages\com.unity.2d.sprite\Editor\SpriteEditorModule\SpritePhysicsShapeModule.cs" />
-     <Compile Include="C:\Program Files\Unity\Hub\Editor\2019.3.15f1\Editor\Data\Resources\PackageManager\BuiltInPackages\com.unity.2d.sprite\Editor\SpriteEditorModule\SpriteSecondaryTexturesModule.cs" />
-     <Compile Include="C:\Program Files\Unity\Hub\Editor\2019.3.15f1\Editor\Data\Resources\PackageManager\BuiltInPackages\com.unity.2d.sprite\Editor\SpriteEditorModule\TextureImporterDataProvider.cs" />
-     <Compile Include="C:\Program Files\Unity\Hub\Editor\2019.3.15f1\Editor\Data\Resources\PackageManager\BuiltInPackages\com.unity.2d.sprite\Editor\SpriteEditorModule\TextureImporterDataProviderImplementation.cs" />
-     <None Include="C:\Program Files\Unity\Hub\Editor\2019.3.15f1\Editor\Data\Resources\PackageManager\BuiltInPackages\com.unity.2d.sprite\Editor\UI\SpriteEditor\SpriteFrameModuleInspector.uxml" />
-     <None Include="C:\Program Files\Unity\Hub\Editor\2019.3.15f1\Editor\Data\Resources\PackageManager\BuiltInPackages\com.unity.2d.sprite\Editor\Unity.2D.Sprite.Editor.asmdef" />
-     <None Include="C:\Program Files\Unity\Hub\Editor\2019.3.15f1\Editor\Data\Resources\PackageManager\BuiltInPackages\com.unity.2d.sprite\Editor\UI\SpriteEditor\PolygonChangeShapeWindow.uxml" />
-     <None Include="C:\Program Files\Unity\Hub\Editor\2019.3.15f1\Editor\Data\Resources\PackageManager\BuiltInPackages\com.unity.2d.sprite\Editor\UI\SpriteEditor\SpriteEditor.uss" />
+     <Compile Include="Assets\VSCode\Plugins\Editor\VSCode.cs" />
  <Reference Include="UnityEngine">
  <HintPath>C:/Program Files/Unity/Hub/Editor/2019.3.15f1/Editor/Data/Managed/UnityEngine/UnityEngine.dll</HintPath>
  </Reference>
@@ -679,13 +646,9 @@
  </Reference>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="UnityEditor.UI.csproj">
-      <Project>{C8AB2723-B5BF-4009-8182-82FD807FD021}</Project>
-      <Name>UnityEditor.UI</Name>
-    </ProjectReference>
-    <ProjectReference Include="UnityEngine.UI.csproj">
-      <Project>{2F336E0F-F638-BAC2-CECC-47B6D4520D50}</Project>
-      <Name>UnityEngine.UI</Name>
+    <ProjectReference Include="Assembly-CSharp.csproj">
+      <Project>{1621CF0A-0BEA-0A7B-314B-87F0C94E1704}</Project>
+      <Name>Assembly-CSharp</Name>
     </ProjectReference>
     <ProjectReference Include="UnityEditor.TestRunner.csproj">
       <Project>{E5E44D32-8F69-655E-417C-D8B61EA6821F}</Project>
@@ -694,6 +657,154 @@
     <ProjectReference Include="UnityEngine.TestRunner.csproj">
       <Project>{8F077946-715B-1320-AA39-3C498FDA06B9}</Project>
       <Name>UnityEngine.TestRunner</Name>
+    </ProjectReference>
+    <ProjectReference Include="Unity.Timeline.Editor.csproj">
+      <Project>{6B6C4B0C-E00E-00F2-A6C0-C5D0CF8DF800}</Project>
+      <Name>Unity.Timeline.Editor</Name>
+    </ProjectReference>
+    <ProjectReference Include="NewAssembly.csproj">
+      <Project>{19A1F0A9-159C-976B-8B26-F964E95E5D50}</Project>
+      <Name>NewAssembly</Name>
+    </ProjectReference>
+    <ProjectReference Include="UnityEngine.Monetization.csproj">
+      <Project>{DA259C10-C3EE-21E1-CE1A-5F7772822BF3}</Project>
+      <Name>UnityEngine.Monetization</Name>
+    </ProjectReference>
+    <ProjectReference Include="OSA-Editor.csproj">
+      <Project>{6F4A0892-7B4E-670E-C732-C81DD191A041}</Project>
+      <Name>OSA-Editor</Name>
+    </ProjectReference>
+    <ProjectReference Include="com.unity.multiplayer-hlapi.Editor.csproj">
+      <Project>{43FC1B3B-7B47-B73A-E4CE-521C89B8D2CD}</Project>
+      <Name>com.unity.multiplayer-hlapi.Editor</Name>
+    </ProjectReference>
+    <ProjectReference Include="Unity.VSCode.Editor.csproj">
+      <Project>{725475F6-0E83-F10A-19F7-0EA5A3516289}</Project>
+      <Name>Unity.VSCode.Editor</Name>
+    </ProjectReference>
+    <ProjectReference Include="GoogleSheetsToUnity.csproj">
+      <Project>{66997263-D8D8-B376-9D83-EB9693C8F585}</Project>
+      <Name>GoogleSheetsToUnity</Name>
+    </ProjectReference>
+    <ProjectReference Include="GoogleExporter.csproj">
+      <Project>{328ED4D1-2A73-84D4-DE96-1031A72817F9}</Project>
+      <Name>GoogleExporter</Name>
+    </ProjectReference>
+    <ProjectReference Include="UnityEngine.Advertisements.csproj">
+      <Project>{4D08E427-CC3E-DC5E-6207-F0F9A4018C38}</Project>
+      <Name>UnityEngine.Advertisements</Name>
+    </ProjectReference>
+    <ProjectReference Include="Unity.2D.SpriteShape.Editor.csproj">
+      <Project>{890FD81A-2A92-2099-EFE0-4F17C2128F01}</Project>
+      <Name>Unity.2D.SpriteShape.Editor</Name>
+    </ProjectReference>
+    <ProjectReference Include="Unity.TextMeshPro.Editor.csproj">
+      <Project>{ED5795F9-1B33-0135-5AE5-A62ADF824986}</Project>
+      <Name>Unity.TextMeshPro.Editor</Name>
+    </ProjectReference>
+    <ProjectReference Include="Unity.2D.Path.Editor.csproj">
+      <Project>{184475F8-DA54-EE1E-4C72-5ABA7C5DC277}</Project>
+      <Name>Unity.2D.Path.Editor</Name>
+    </ProjectReference>
+    <ProjectReference Include="OSA.csproj">
+      <Project>{119543B7-5B08-4BF0-EB2C-722ACDED448F}</Project>
+      <Name>OSA</Name>
+    </ProjectReference>
+    <ProjectReference Include="UnityEngine.UI.csproj">
+      <Project>{2F336E0F-F638-BAC2-CECC-47B6D4520D50}</Project>
+      <Name>UnityEngine.UI</Name>
+    </ProjectReference>
+    <ProjectReference Include="Unity.Timeline.csproj">
+      <Project>{81B942FA-1AC1-09FD-C3E5-0F02BDAA3FDF}</Project>
+      <Name>Unity.Timeline</Name>
+    </ProjectReference>
+    <ProjectReference Include="Unity.CollabProxy.Editor.csproj">
+      <Project>{6BE9C882-3999-EC39-0390-EB104D37D138}</Project>
+      <Name>Unity.CollabProxy.Editor</Name>
+    </ProjectReference>
+    <ProjectReference Include="com.unity.multiplayer-weaver.Editor.csproj">
+      <Project>{67700819-2AC4-EBB7-49E6-3CFD24BACE5F}</Project>
+      <Name>com.unity.multiplayer-weaver.Editor</Name>
+    </ProjectReference>
+    <ProjectReference Include="UnityEngine.XR.LegacyInputHelpers.csproj">
+      <Project>{4D31F429-4457-8C8A-2B49-C8B91E30986B}</Project>
+      <Name>UnityEngine.XR.LegacyInputHelpers</Name>
+    </ProjectReference>
+    <ProjectReference Include="Unity.Rider.Editor.csproj">
+      <Project>{083AAB20-7000-318C-80E8-049216699490}</Project>
+      <Name>Unity.Rider.Editor</Name>
+    </ProjectReference>
+    <ProjectReference Include="AmoaebaUtils.csproj">
+      <Project>{EF3FE60E-44F7-64EC-A56F-86FE2852A471}</Project>
+      <Name>AmoaebaUtils</Name>
+    </ProjectReference>
+    <ProjectReference Include="Unity.Mathematics.csproj">
+      <Project>{10E1C726-8089-43F5-28D9-1F96066F0E02}</Project>
+      <Name>Unity.Mathematics</Name>
+    </ProjectReference>
+    <ProjectReference Include="Unity.InternalAPIEngineBridge.001.csproj">
+      <Project>{4520983C-45E3-589A-7607-42B6CFCDABB8}</Project>
+      <Name>Unity.InternalAPIEngineBridge.001</Name>
+    </ProjectReference>
+    <ProjectReference Include="Unity.2D.Sprite.Editor.csproj">
+      <Project>{2ED3A521-C2D7-B381-268D-725BC26A1279}</Project>
+      <Name>Unity.2D.Sprite.Editor</Name>
+    </ProjectReference>
+    <ProjectReference Include="Unity.2D.Common.Runtime.csproj">
+      <Project>{8A8670B2-5842-2EDE-EA25-81799CD5CC45}</Project>
+      <Name>Unity.2D.Common.Runtime</Name>
+    </ProjectReference>
+    <ProjectReference Include="Unity.2D.Tilemap.Editor.csproj">
+      <Project>{31CF9EBB-CD5D-6FF5-843A-8CEACAFC2A63}</Project>
+      <Name>Unity.2D.Tilemap.Editor</Name>
+    </ProjectReference>
+    <ProjectReference Include="Unity.2D.SpriteShape.Runtime.csproj">
+      <Project>{D7196F6F-3FB3-76B7-7349-0B518994EF63}</Project>
+      <Name>Unity.2D.SpriteShape.Runtime</Name>
+    </ProjectReference>
+    <ProjectReference Include="UnityEditor.SpatialTracking.csproj">
+      <Project>{334261BF-CA52-51EA-DEDA-E68E6B17D5BF}</Project>
+      <Name>UnityEditor.SpatialTracking</Name>
+    </ProjectReference>
+    <ProjectReference Include="UnityEngine.SpatialTracking.csproj">
+      <Project>{8B38F443-0C86-EF07-CB85-B097A8DF377C}</Project>
+      <Name>UnityEngine.SpatialTracking</Name>
+    </ProjectReference>
+    <ProjectReference Include="Unity.Mathematics.Editor.csproj">
+      <Project>{40DFB6B6-4A12-2FEC-D39D-37A05E0D329A}</Project>
+      <Name>Unity.Mathematics.Editor</Name>
+    </ProjectReference>
+    <ProjectReference Include="AmoaebaUtilsEditor.csproj">
+      <Project>{2C057380-5964-9D2C-46E1-640C673711BB}</Project>
+      <Name>AmoaebaUtilsEditor</Name>
+    </ProjectReference>
+    <ProjectReference Include="Unity.TextMeshPro.csproj">
+      <Project>{4548E9A1-9B07-D401-23C9-A4E5D8D28866}</Project>
+      <Name>Unity.TextMeshPro</Name>
+    </ProjectReference>
+    <ProjectReference Include="Unity.2D.Common.Editor.csproj">
+      <Project>{2A43EE6F-C617-F4B9-6939-E44BE33649C9}</Project>
+      <Name>Unity.2D.Common.Editor</Name>
+    </ProjectReference>
+    <ProjectReference Include="Unity.Analytics.DataPrivacy.csproj">
+      <Project>{52D57B89-C665-CE2C-BEF7-B797CCCC5273}</Project>
+      <Name>Unity.Analytics.DataPrivacy</Name>
+    </ProjectReference>
+    <ProjectReference Include="UnityEditor.XR.LegacyInputHelpers.csproj">
+      <Project>{B33B4E1A-F447-75A2-5DA0-B8AF33751536}</Project>
+      <Name>UnityEditor.XR.LegacyInputHelpers</Name>
+    </ProjectReference>
+    <ProjectReference Include="Unity.InternalAPIEditorBridge.001.csproj">
+      <Project>{57F6C035-BCF9-840A-9F5E-906617F52753}</Project>
+      <Name>Unity.InternalAPIEditorBridge.001</Name>
+    </ProjectReference>
+    <ProjectReference Include="UnityEditor.UI.csproj">
+      <Project>{C8AB2723-B5BF-4009-8182-82FD807FD021}</Project>
+      <Name>UnityEditor.UI</Name>
+    </ProjectReference>
+    <ProjectReference Include="com.unity.multiplayer-hlapi.Runtime.csproj">
+      <Project>{75C0A462-0648-485C-FE43-4750E2657047}</Project>
+      <Name>com.unity.multiplayer-hlapi.Runtime</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
