--- a/GameJoltApiTest/MessagePack.csproj
+++ b/GameJoltApiTest/MessagePack.csproj
@@ -9,10 +9,10 @@
     <ProductVersion>10.0.20506</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <RootNamespace></RootNamespace>
-    <ProjectGuid>{3b1bfc43-477b-3ab7-e4ce-521c89b8d2cd}</ProjectGuid>
+    <ProjectGuid>{2bf95f44-914d-1617-419a-6974167331f8}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <AssemblyName>com.unity.multiplayer-hlapi.Editor</AssemblyName>
+    <AssemblyName>MessagePack</AssemblyName>
     <TargetFrameworkVersion>v4.7.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <BaseDirectory>.</BaseDirectory>
@@ -26,7 +26,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <NoWarn>0169</NoWarn>
-    <AllowUnsafeBlocks>False</AllowUnsafeBlocks>
+    <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup>
     <NoConfig>true</NoConfig>
@@ -36,26 +36,103 @@
     <ImplicitlyExpandDesignTimeFacades>false</ImplicitlyExpandDesignTimeFacades>
   </PropertyGroup>
   <ItemGroup>
-     <Compile Include="Library\PackageCache\com.unity.multiplayer-hlapi@1.0.6\Editor\NetworkAnimatorEditor.cs" />
-     <Compile Include="Library\PackageCache\com.unity.multiplayer-hlapi@1.0.6\Editor\NetworkBehaviourInspector.cs" />
-     <Compile Include="Library\PackageCache\com.unity.multiplayer-hlapi@1.0.6\Editor\NetworkDiscoveryEditor.cs" />
-     <Compile Include="Library\PackageCache\com.unity.multiplayer-hlapi@1.0.6\Editor\NetworkIdentityEditor.cs" />
-     <Compile Include="Library\PackageCache\com.unity.multiplayer-hlapi@1.0.6\Editor\NetworkInformationPreview.cs" />
-     <Compile Include="Library\PackageCache\com.unity.multiplayer-hlapi@1.0.6\Editor\NetworkLobbyManagerEditor.cs" />
-     <Compile Include="Library\PackageCache\com.unity.multiplayer-hlapi@1.0.6\Editor\NetworkManagerEditor.cs" />
-     <Compile Include="Library\PackageCache\com.unity.multiplayer-hlapi@1.0.6\Editor\NetworkManagerHUDEditor.cs" />
-     <Compile Include="Library\PackageCache\com.unity.multiplayer-hlapi@1.0.6\Editor\NetworkManagerPreview.cs" />
-     <Compile Include="Library\PackageCache\com.unity.multiplayer-hlapi@1.0.6\Editor\NetworkMigrationManagerEditor.cs" />
-     <Compile Include="Library\PackageCache\com.unity.multiplayer-hlapi@1.0.6\Editor\NetworkScenePostProcess.cs" />
-     <Compile Include="Library\PackageCache\com.unity.multiplayer-hlapi@1.0.6\Editor\NetworkTransformChildEditor.cs" />
-     <Compile Include="Library\PackageCache\com.unity.multiplayer-hlapi@1.0.6\Editor\NetworkTransformEditor.cs" />
-     <Compile Include="Library\PackageCache\com.unity.multiplayer-hlapi@1.0.6\Editor\NetworkTransformPreview.cs" />
-     <Compile Include="Library\PackageCache\com.unity.multiplayer-hlapi@1.0.6\Editor\NetworkTransformVisualizerEditor.cs" />
-     <Compile Include="Library\PackageCache\com.unity.multiplayer-hlapi@1.0.6\Editor\Properties\AssemblyInfo.cs" />
-     <Compile Include="Library\PackageCache\com.unity.multiplayer-hlapi@1.0.6\Editor\Tools\MiniJSON.cs" />
-     <Compile Include="Library\PackageCache\com.unity.multiplayer-hlapi@1.0.6\Editor\Tools\TextUtility.cs" />
-     <Compile Include="Library\PackageCache\com.unity.multiplayer-hlapi@1.0.6\Editor\WeaverRunner.cs" />
-     <None Include="Library\PackageCache\com.unity.multiplayer-hlapi@1.0.6\Editor\com.unity.multiplayer-hlapi.Editor.asmdef" />
+     <Compile Include="Assets\Packages\AmoaebaUtils\Persistance\MessagePack\Annotations\Attributes.cs" />
+     <Compile Include="Assets\Packages\AmoaebaUtils\Persistance\MessagePack\Annotations\IMessagePackSerializationCallbackReceiver.cs" />
+     <Compile Include="Assets\Packages\AmoaebaUtils\Persistance\MessagePack\BitOperations.cs" />
+     <Compile Include="Assets\Packages\AmoaebaUtils\Persistance\MessagePack\BufferWriter.cs" />
+     <Compile Include="Assets\Packages\AmoaebaUtils\Persistance\MessagePack\ExtensionHeader.cs" />
+     <Compile Include="Assets\Packages\AmoaebaUtils\Persistance\MessagePack\ExtensionResult.cs" />
+     <Compile Include="Assets\Packages\AmoaebaUtils\Persistance\MessagePack\Formatters\CollectionFormatter.cs" />
+     <Compile Include="Assets\Packages\AmoaebaUtils\Persistance\MessagePack\Formatters\CollectionHelpers`2.cs" />
+     <Compile Include="Assets\Packages\AmoaebaUtils\Persistance\MessagePack\Formatters\DateTimeFormatters.cs" />
+     <Compile Include="Assets\Packages\AmoaebaUtils\Persistance\MessagePack\Formatters\DictionaryFormatter.cs" />
+     <Compile Include="Assets\Packages\AmoaebaUtils\Persistance\MessagePack\Formatters\DynamicObjectTypeFallbackFormatter.cs" />
+     <Compile Include="Assets\Packages\AmoaebaUtils\Persistance\MessagePack\Formatters\EnumAsStringFormatter`1.cs" />
+     <Compile Include="Assets\Packages\AmoaebaUtils\Persistance\MessagePack\Formatters\GenericEnumFormatter`1.cs" />
+     <Compile Include="Assets\Packages\AmoaebaUtils\Persistance\MessagePack\Formatters\IMessagePackFormatter`1.cs" />
+     <Compile Include="Assets\Packages\AmoaebaUtils\Persistance\MessagePack\Formatters\IgnoreFormatter`1.cs" />
+     <Compile Include="Assets\Packages\AmoaebaUtils\Persistance\MessagePack\Formatters\MultiDimensionalArrayFormatter.cs" />
+     <Compile Include="Assets\Packages\AmoaebaUtils\Persistance\MessagePack\Formatters\NilFormatter.cs" />
+     <Compile Include="Assets\Packages\AmoaebaUtils\Persistance\MessagePack\Formatters\NullableFormatter.cs" />
+     <Compile Include="Assets\Packages\AmoaebaUtils\Persistance\MessagePack\Formatters\PrimitiveObjectFormatter.cs" />
+     <Compile Include="Assets\Packages\AmoaebaUtils\Persistance\MessagePack\Formatters\StandardClassLibraryFormatter.cs" />
+     <Compile Include="Assets\Packages\AmoaebaUtils\Persistance\MessagePack\Formatters\TypelessFormatter.cs" />
+     <Compile Include="Assets\Packages\AmoaebaUtils\Persistance\MessagePack\Formatters\UnsafeBinaryFormatters.cs" />
+     <Compile Include="Assets\Packages\AmoaebaUtils\Persistance\MessagePack\HashCode.cs" />
+     <Compile Include="Assets\Packages\AmoaebaUtils\Persistance\MessagePack\IFormatterResolver.cs" />
+     <Compile Include="Assets\Packages\AmoaebaUtils\Persistance\MessagePack\Internal\AsymmetricKeyHashTable.cs" />
+     <Compile Include="Assets\Packages\AmoaebaUtils\Persistance\MessagePack\Internal\AutomataDictionary.cs" />
+     <Compile Include="Assets\Packages\AmoaebaUtils\Persistance\MessagePack\Internal\ByteArrayStringHashTable.cs" />
+     <Compile Include="Assets\Packages\AmoaebaUtils\Persistance\MessagePack\Internal\CodeGenHelpers.cs" />
+     <Compile Include="Assets\Packages\AmoaebaUtils\Persistance\MessagePack\Internal\DateTimeConstants.cs" />
+     <Compile Include="Assets\Packages\AmoaebaUtils\Persistance\MessagePack\Internal\DynamicAssembly.cs" />
+     <Compile Include="Assets\Packages\AmoaebaUtils\Persistance\MessagePack\Internal\ExpressionUtility.cs" />
+     <Compile Include="Assets\Packages\AmoaebaUtils\Persistance\MessagePack\Internal\FarmHash.cs" />
+     <Compile Include="Assets\Packages\AmoaebaUtils\Persistance\MessagePack\Internal\GuidBits.cs" />
+     <Compile Include="Assets\Packages\AmoaebaUtils\Persistance\MessagePack\Internal\ILGeneratorExtensions.cs" />
+     <Compile Include="Assets\Packages\AmoaebaUtils\Persistance\MessagePack\Internal\ReflectionExtensions.cs" />
+     <Compile Include="Assets\Packages\AmoaebaUtils\Persistance\MessagePack\Internal\RuntimeTypeHandleEqualityComparer.cs" />
+     <Compile Include="Assets\Packages\AmoaebaUtils\Persistance\MessagePack\Internal\Sequence`1.cs" />
+     <Compile Include="Assets\Packages\AmoaebaUtils\Persistance\MessagePack\Internal\ThreadsafeTypeKeyHashTable.cs" />
+     <Compile Include="Assets\Packages\AmoaebaUtils\Persistance\MessagePack\Internal\TinyJsonReader.cs" />
+     <Compile Include="Assets\Packages\AmoaebaUtils\Persistance\MessagePack\Internal\UnsafeMemory.Low.cs" />
+     <Compile Include="Assets\Packages\AmoaebaUtils\Persistance\MessagePack\LZ4\LZ4Codec.Helper.cs" />
+     <Compile Include="Assets\Packages\AmoaebaUtils\Persistance\MessagePack\LZ4\LZ4Codec.Safe.cs" />
+     <Compile Include="Assets\Packages\AmoaebaUtils\Persistance\MessagePack\LZ4\LZ4Codec.Safe32.Dirty.cs" />
+     <Compile Include="Assets\Packages\AmoaebaUtils\Persistance\MessagePack\LZ4\LZ4Codec.Safe64.Dirty.cs" />
+     <Compile Include="Assets\Packages\AmoaebaUtils\Persistance\MessagePack\LZ4\LZ4Codec.Unsafe.cs" />
+     <Compile Include="Assets\Packages\AmoaebaUtils\Persistance\MessagePack\LZ4\LZ4Codec.Unsafe32.Dirty.cs" />
+     <Compile Include="Assets\Packages\AmoaebaUtils\Persistance\MessagePack\LZ4\LZ4Codec.Unsafe64.Dirty.cs" />
+     <Compile Include="Assets\Packages\AmoaebaUtils\Persistance\MessagePack\LZ4\LZ4Codec.cs" />
+     <Compile Include="Assets\Packages\AmoaebaUtils\Persistance\MessagePack\MessagePackCode.cs" />
+     <Compile Include="Assets\Packages\AmoaebaUtils\Persistance\MessagePack\MessagePackCompression.cs" />
+     <Compile Include="Assets\Packages\AmoaebaUtils\Persistance\MessagePack\MessagePackReader.cs" />
+     <Compile Include="Assets\Packages\AmoaebaUtils\Persistance\MessagePack\MessagePackSecurity.cs" />
+     <Compile Include="Assets\Packages\AmoaebaUtils\Persistance\MessagePack\MessagePackSerializationException.cs" />
+     <Compile Include="Assets\Packages\AmoaebaUtils\Persistance\MessagePack\MessagePackSerializer.Json.cs" />
+     <Compile Include="Assets\Packages\AmoaebaUtils\Persistance\MessagePack\MessagePackSerializer.NonGeneric.cs" />
+     <Compile Include="Assets\Packages\AmoaebaUtils\Persistance\MessagePack\MessagePackSerializer.cs" />
+     <Compile Include="Assets\Packages\AmoaebaUtils\Persistance\MessagePack\MessagePackSerializerOptions.cs" />
+     <Compile Include="Assets\Packages\AmoaebaUtils\Persistance\MessagePack\MessagePackStreamReader.cs" />
+     <Compile Include="Assets\Packages\AmoaebaUtils\Persistance\MessagePack\MessagePackWriter.cs" />
+     <Compile Include="Assets\Packages\AmoaebaUtils\Persistance\MessagePack\Nil.cs" />
+     <Compile Include="Assets\Packages\AmoaebaUtils\Persistance\MessagePack\Resolvers\AttributeFormatterResolver.cs" />
+     <Compile Include="Assets\Packages\AmoaebaUtils\Persistance\MessagePack\Resolvers\BuiltinResolver.cs" />
+     <Compile Include="Assets\Packages\AmoaebaUtils\Persistance\MessagePack\Resolvers\CachingFormatterResolver.cs" />
+     <Compile Include="Assets\Packages\AmoaebaUtils\Persistance\MessagePack\Resolvers\CompositeResolver.cs" />
+     <Compile Include="Assets\Packages\AmoaebaUtils\Persistance\MessagePack\Resolvers\ContractlessReflectionObjectResolver.cs" />
+     <Compile Include="Assets\Packages\AmoaebaUtils\Persistance\MessagePack\Resolvers\DynamicEnumAsStringResolver.cs" />
+     <Compile Include="Assets\Packages\AmoaebaUtils\Persistance\MessagePack\Resolvers\DynamicEnumResolver.cs" />
+     <Compile Include="Assets\Packages\AmoaebaUtils\Persistance\MessagePack\Resolvers\DynamicGenericResolver.cs" />
+     <Compile Include="Assets\Packages\AmoaebaUtils\Persistance\MessagePack\Resolvers\DynamicObjectResolver.cs" />
+     <Compile Include="Assets\Packages\AmoaebaUtils\Persistance\MessagePack\Resolvers\DynamicUnionResolver.cs" />
+     <Compile Include="Assets\Packages\AmoaebaUtils\Persistance\MessagePack\Resolvers\NativeDateTimeResolver.cs" />
+     <Compile Include="Assets\Packages\AmoaebaUtils\Persistance\MessagePack\Resolvers\NativeDecimalResolver.cs" />
+     <Compile Include="Assets\Packages\AmoaebaUtils\Persistance\MessagePack\Resolvers\NativeGuidResolver.cs" />
+     <Compile Include="Assets\Packages\AmoaebaUtils\Persistance\MessagePack\Resolvers\PrimitiveObjectResolver.cs" />
+     <Compile Include="Assets\Packages\AmoaebaUtils\Persistance\MessagePack\Resolvers\StandardResolver.cs" />
+     <Compile Include="Assets\Packages\AmoaebaUtils\Persistance\MessagePack\Resolvers\StaticCompositeResolver.cs" />
+     <Compile Include="Assets\Packages\AmoaebaUtils\Persistance\MessagePack\Resolvers\TypelessContractlessStandardResolver.cs" />
+     <Compile Include="Assets\Packages\AmoaebaUtils\Persistance\MessagePack\Resolvers\TypelessObjectResolver.cs" />
+     <Compile Include="Assets\Packages\AmoaebaUtils\Persistance\MessagePack\SequencePool.cs" />
+     <Compile Include="Assets\Packages\AmoaebaUtils\Persistance\MessagePack\SequenceReader.cs" />
+     <Compile Include="Assets\Packages\AmoaebaUtils\Persistance\MessagePack\SequenceReaderExtensions.cs" />
+     <Compile Include="Assets\Packages\AmoaebaUtils\Persistance\MessagePack\StreamPolyfillExtensions.cs" />
+     <Compile Include="Assets\Packages\AmoaebaUtils\Persistance\MessagePack\StringEncoding.cs" />
+     <Compile Include="Assets\Packages\AmoaebaUtils\Persistance\MessagePack\T4\ForceSizePrimitiveFormatter.cs" />
+     <Compile Include="Assets\Packages\AmoaebaUtils\Persistance\MessagePack\T4\MessagePackReader.Integers.cs" />
+     <Compile Include="Assets\Packages\AmoaebaUtils\Persistance\MessagePack\T4\PrimitiveFormatter.cs" />
+     <Compile Include="Assets\Packages\AmoaebaUtils\Persistance\MessagePack\T4\TupleFormatter.cs" />
+     <Compile Include="Assets\Packages\AmoaebaUtils\Persistance\MessagePack\T4\UnsafeMemory.cs" />
+     <Compile Include="Assets\Packages\AmoaebaUtils\Persistance\MessagePack\T4\ValueTupleFormatter.cs" />
+     <Compile Include="Assets\Packages\AmoaebaUtils\Persistance\MessagePack\ThisLibraryExtensionTypeCodes.cs" />
+     <Compile Include="Assets\Packages\AmoaebaUtils\Persistance\MessagePack\Unity\Extension\UnityBlitResolver.cs" />
+     <Compile Include="Assets\Packages\AmoaebaUtils\Persistance\MessagePack\Unity\Extension\UnsafeBlitFormatter.cs" />
+     <Compile Include="Assets\Packages\AmoaebaUtils\Persistance\MessagePack\Unity\Formatters.cs" />
+     <Compile Include="Assets\Packages\AmoaebaUtils\Persistance\MessagePack\Unity\MessagePackWindow.cs" />
+     <Compile Include="Assets\Packages\AmoaebaUtils\Persistance\MessagePack\Unity\UnityResolver.cs" />
+     <Compile Include="Assets\Packages\AmoaebaUtils\Persistance\MessagePack\Utilities.cs" />
+     <None Include="Assets\Packages\AmoaebaUtils\Persistance\MessagePack\MessagePack.asmdef" />
     <Reference Include="UnityEngine">
         <HintPath>C:/Program Files/Unity/Hub/Editor/2019.4.0f1/Editor/Data/Managed/UnityEngine/UnityEngine.dll</HintPath>
     </Reference>
@@ -82,12 +159,6 @@
     </Reference>
     <Reference Include="UnityEngine.ClothModule">
         <HintPath>C:/Program Files/Unity/Hub/Editor/2019.4.0f1/Editor/Data/Managed/UnityEngine/UnityEngine.ClothModule.dll</HintPath>
-    </Reference>
-    <Reference Include="UnityEngine.ClusterInputModule">
-        <HintPath>C:/Program Files/Unity/Hub/Editor/2019.4.0f1/Editor/Data/Managed/UnityEngine/UnityEngine.ClusterInputModule.dll</HintPath>
-    </Reference>
-    <Reference Include="UnityEngine.ClusterRendererModule">
-        <HintPath>C:/Program Files/Unity/Hub/Editor/2019.4.0f1/Editor/Data/Managed/UnityEngine/UnityEngine.ClusterRendererModule.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.CoreModule">
         <HintPath>C:/Program Files/Unity/Hub/Editor/2019.4.0f1/Editor/Data/Managed/UnityEngine/UnityEngine.CoreModule.dll</HintPath>
@@ -298,9 +369,6 @@
     </Reference>
     <Reference Include="UnityEditor.Purchasing">
         <HintPath>C:/Users/ivoca/Documents/RocketSubs/GameJoltApiTest/Library/PackageCache/com.unity.purchasing@2.0.6/Editor/UnityEditor.Purchasing.dll</HintPath>
-    </Reference>
-    <Reference Include="nunit.framework">
-        <HintPath>C:/Users/ivoca/Documents/RocketSubs/GameJoltApiTest/Library/PackageCache/com.unity.ext.nunit@1.0.0/net35/unity-custom/nunit.framework.dll</HintPath>
     </Reference>
     <Reference Include="mscorlib">
         <HintPath>C:/Program Files/Unity/Hub/Editor/2019.4.0f1/Editor/Data/MonoBleedingEdge/lib/mono/4.7.1-api/mscorlib.dll</HintPath>
@@ -658,16 +726,6 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="com.unity.multiplayer-hlapi.Runtime.csproj">
-      <Project>{62a4c075-4806-5c48-fe43-4750e2657047}</Project>
-      <Name>com.unity.multiplayer-hlapi.Runtime</Name>
-      <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
-    </ProjectReference>
-    <ProjectReference Include="com.unity.multiplayer-weaver.Editor.csproj">
-      <Project>{19087067-c42a-b7eb-49e6-3cfd24bace5f}</Project>
-      <Name>com.unity.multiplayer-weaver.Editor</Name>
-      <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
-    </ProjectReference>
     <ProjectReference Include="UnityEditor.UI.csproj">
       <Project>{2327abc8-bfb5-0940-8182-82fd807fd021}</Project>
       <Name>UnityEditor.UI</Name>
@@ -676,16 +734,6 @@
     <ProjectReference Include="UnityEngine.UI.csproj">
       <Project>{0f6e332f-38f6-c2ba-cecc-47b6d4520d50}</Project>
       <Name>UnityEngine.UI</Name>
-      <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
-    </ProjectReference>
-    <ProjectReference Include="UnityEditor.TestRunner.csproj">
-      <Project>{324de4e5-698f-5e65-417c-d8b61ea6821f}</Project>
-      <Name>UnityEditor.TestRunner</Name>
-      <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
-    </ProjectReference>
-    <ProjectReference Include="UnityEngine.TestRunner.csproj">
-      <Project>{4679078f-5b71-2013-aa39-3c498fda06b9}</Project>
-      <Name>UnityEngine.TestRunner</Name>
       <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
     </ProjectReference>
   </ItemGroup>
